refactor: adopt common utils in jdbc datasource plugin